CSS now linked in HTML file

--- a/template/index.html
+++ b/template/index.html
@@ -26,11 +26,13 @@
   <head>
     <title>HTML5 Slide Deck – uulm Style</title>
 
+	<link href="../styles.css" media="screen" rel="stylesheet" type="text/css" />
+	<link href="../uulm.css" media="screen" rel="stylesheet" type="text/css" />
+
     <meta charset='utf-8'>
  <script
       src='../slides.js'></script>
 
-	<link href="../uulm.css" media="screen" rel="stylesheet" type="text/css" />
   </head>
   
   <style>
