more appropriate credits in the sample template

--- a/template/index.html
+++ b/template/index.html
@@ -448,6 +448,15 @@
 
       <article>
         <h3>
+          Credits
+        </h3>
+	<p>
+	Thanks to Luke Mahé and Marcin Wichary for the original Goole slides template.
+	</p>
+      </article>
+
+      <article>
+        <h3>
           That's all for now!
         </h3>
         
