--- a/template/index.html
+++ b/template/index.html
@@ -22,15 +22,16 @@
 -->
 
 <html>
-	<head>
-		<link href="../styles.css" media="screen" rel="stylesheet" type="text/css" />
-		<link href="../uulm.css" media="screen" rel="stylesheet" type="text/css" />
-		<meta charset='utf-8'>
-		<script src='../slides.js'></script>
 
-		<title>HTML5 Slide Deck – uulm Style</title>
+<head>
+	<link href="../styles.css" media="screen" rel="stylesheet" type="text/css" />
+	<link href="../uulm.css" media="screen" rel="stylesheet" type="text/css" />
+	<meta charset='utf-8'>
+	<script src='../slides.js'></script>
 
-	</head>
+	<title>HTML5 Slide Deck – uulm Style</title>
+
+</head>
 
 <body style='display: none'>
 
@@ -395,7 +396,7 @@
 
 		<article>
 			<h3>Credits</h3>
-			<p>Thanks to Luke Mahé and Marcin Wichary for the original Goole
+			<p>Thanks to Luke Mahé and Marcin Wichary for the original Google
 				slides template.</p>
 		</article>
 
