--- a/template/index.html
+++ b/template/index.html
@@ -28,14 +28,14 @@
 	<link href="../uulm.css" media="screen" rel="stylesheet" type="text/css" />
 	<meta charset='utf-8'>
 	<script src='../slides.js'></script>
-
+ 
 	<title>HTML5 Slide Deck – uulm Style</title>
 
 </head>
 
-<body style='display: none'>
+<body style='display: none' class="layout-regular template-uulm-in">
 
-	<section class='slides layout-normal template-uulm-in'>
+	<section class='slides'>
 		<!-- Your slides (<article>s) go here. Delete or comment out the
            slides below. -->
 
@@ -53,6 +53,10 @@
 				<img id="uulm-logo" src='../images/uulm_logo.svg'>
 			</p>
 		</article>
+		
+	</section>
+		
+	<section class='slides' title="foobar">		
 
 		<article>
 			<h3>The nitty-gritty, this is a slide:</h3>
@@ -75,6 +79,9 @@
 			<p>You can see on the next slide what it looks like.</p>
 		</article>
 
+	</section>
+	
+	<section class='slides'>
 
 
 		<article>
