--- a/lib/styles.css
+++ b/lib/styles.css
@@ -48,7 +48,7 @@ body {
   -webkit-transform: translate3d(0, 0, 0);
 }
 
-.slides > article {
+.slides section > article{
   display: block;
 
   position: absolute;
@@ -85,32 +85,24 @@ body {
   -moz-transition: -moz-transform .3s ease-out;
   -webkit-transition: -webkit-transform .3s ease-out;
 }
-.slides.layout-widescreen > article {
+.slides.layout-widescreen section > article {
   margin-left: -550px;
   width: 1100px;
 }
-.slides.layout-faux-widescreen > article {
+.slides.layout-faux-widescreen section > article {
   margin-left: -550px;
   width: 1100px;
   
   padding: 40px 160px;
 }
 
-.slides.template-default > article:not(.nobackground):not(.biglogo) {
+.slides.template-default section > article:not(.nobackground):not(.biglogo) {
   background: url(images/google-logo-small.png) 710px 625px no-repeat;  
   
   background-color: white;  
 } 
 
-.slides.template-io2011 > article:not(.nobackground):not(.biglogo) {
-  background: url(images/colorbar.png) 0 600px repeat-x,
-              url(images/googleio-logo.png) 640px 625px no-repeat;
-
-  background-size: 100%, 225px;  
-
-  background-color: white;  
-}
-.slides.layout-widescreen > article:not(.nobackground):not(.biglogo),
+.slides.layout-widescreen section > article:not(.nobackground):not(.biglogo),
 .slides.layout-faux-widescreen > article:not(.nobackground):not(.biglogo) {
   background-position-x: 0, 840px;
 }
@@ -155,38 +147,38 @@ body {
 
 /* Slides */
 
-.slides > article {
+.slides section > article{
   display: none;
 }
-.slides > article.far-past {
+.slides section > article.far-past {
   display: block;
   transform: translate(-2040px);
   -o-transform: translate(-2040px);
   -moz-transform: translate(-2040px);
   -webkit-transform: translate3d(-2040px, 0, 0);
 }
-.slides > article.past {
+.slides section> article.past {
   display: block;
   transform: translate(-1020px);
   -o-transform: translate(-1020px);
   -moz-transform: translate(-1020px);
   -webkit-transform: translate3d(-1020px, 0, 0);
 }
-.slides > article.current {
+.slides section > article.current {
   display: block;
   transform: translate(0);
   -o-transform: translate(0);
   -moz-transform: translate(0);
   -webkit-transform: translate3d(0, 0, 0);
 }
-.slides > article.next {
+.slides section > article.next {
   display: block;
   transform: translate(1020px);
   -o-transform: translate(1020px);
   -moz-transform: translate(1020px);
   -webkit-transform: translate3d(1020px, 0, 0);
 }
-.slides > article.far-next {
+.slides section > article.far-next {
   display: block;
   transform: translate(2040px);
   -o-transform: translate(2040px);
@@ -194,40 +186,40 @@ body {
   -webkit-transform: translate3d(2040px, 0, 0);
 }
 
-.slides.layout-widescreen > article.far-past,
-.slides.layout-faux-widescreen > article.far-past {
+.slides.layout-widescreen section > article.far-past,
+.slides.layout-faux-widescreen section > article.far-past {
   display: block;
   transform: translate(-2260px);
   -o-transform: translate(-2260px);
   -moz-transform: translate(-2260px);
   -webkit-transform: translate3d(-2260px, 0, 0);
 }
-.slides.layout-widescreen > article.past,
-.slides.layout-faux-widescreen > article.past {
+.slides.layout-widescreen section > article.past,
+.slides.layout-faux-widescreen section > article.past {
   display: block;
   transform: translate(-1130px);
   -o-transform: translate(-1130px);
   -moz-transform: translate(-1130px);
   -webkit-transform: translate3d(-1130px, 0, 0);
 }
-.slides.layout-widescreen > article.current,
-.slides.layout-faux-widescreen > article.current {
+.slides.layout-widescreen section > article.current,
+.slides.layout-faux-widescreen section > article.current {
   display: block;
   transform: translate(0);
   -o-transform: translate(0);
   -moz-transform: translate(0);
   -webkit-transform: translate3d(0, 0, 0);
 }
-.slides.layout-widescreen > article.next,
-.slides.layout-faux-widescreen > article.next {
+.slides.layout-widescreen section > article.next,
+.slides.layout-faux-widescreen section > article.next {
   display: block;
   transform: translate(1130px);
   -o-transform: translate(1130px);
   -moz-transform: translate(1130px);
   -webkit-transform: translate3d(1130px, 0, 0);
 }
-.slides.layout-widescreen > article.far-next,
-.slides.layout-faux-widescreen > article.far-next {
+.slides.layout-widescreen section > article.far-next,
+.slides.layout-faux-widescreen section > article.far-next {
   display: block;
   transform: translate(2260px);
   -o-transform: translate(2260px);
@@ -237,7 +229,7 @@ body {
 
 /* Styles for slides */
 
-.slides > article {
+.slides section > article {
   font-family: 'Open Sans', Arial, sans-serif;
 
   color: rgb(102, 102, 102);
@@ -380,6 +372,20 @@ li::before {
   margin-left: -.75em;
 
   position: absolute;
+}
+
+ol li::before {
+  content: '';
+}
+
+nav.toc ol li.done{
+	opacity: 0.80;
+}
+nav.toc ol li.current{
+	font-weight:bold;
+}
+nav.toc ol li.future{
+	opacity: 0.80;
 }
 
 pre {
@@ -647,7 +653,7 @@ aside{
 }
 
 
-.no-trans.slides > article{
+.no-trans.slides section > article{
   transition: transform;
   -o-transition: -o-transform;
   -moz-transition: -moz-transform;
@@ -670,4 +676,8 @@ aside{
 	width: 100%; height: 100%;
 	opacity: .95;
 	z-index: 9999;
+}
+
+section header{
+	display: none; 
 }
