added "nofill" class for images, prevents to full-scale images on 'fill' slides

--- a/lib/styles.css
+++ b/lib/styles.css
@@ -450,7 +450,7 @@ article.fill iframe {
   z-index: -1;
 }
 
-article.fill img {
+article.fill img:not(.nofill) {
   position: absolute;
   left: 0;
   top: 0;
